feat: add Linux .deb packaging with electron-builder
- Add electron-builder config for .deb target with Python backend as extraResources
- Modify main.js for packaged mode (getBackendPath, detectCudaLibPath, findPythonPath)
- Add postinst/postrm scripts to create/remove Python venv on install
- Add app icon SVG and icon generation script
- Add build-deb.sh wrapper script
- Add author email to package.json for deb maintainer field

--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "main": "electron/main.js",
   "scripts": {
     "start": "electron .",
-    "setup": "bash scripts/setup.sh"
+    "setup": "bash scripts/setup.sh",
+    "build:icons": "bash scripts/generate-icons.sh",
+    "build:deb": "bash scripts/build-deb.sh",
+    "build": "npm run build:icons && npx electron-builder --linux deb"
   },
-  "dependencies": {
-    "electron": "^35.0.0"
+  "dependencies": {},
+  "devDependencies": {
+    "electron": "^35.0.0",
+    "electron-builder": "^26.0.0"
   },
-  "devDependencies": {},
-  "author": "paul",
+  "author": {"name": "paul", "email": "binb53339@gmail.com"},
   "license": "MIT",
   "private": true
 }
