feat: v1.1.0 — theme toggle, CUDA fallback, sound feedback fix, smoothness overhaul
- Add dark/light theme switcher in Settings with smooth crossfade
- Fix #1: CUDA model load now falls back to CPU automatically when GPU
  is unavailable or fails, with int8 compute type for CPU performance
- Add "auto" device mode that detects CUDA availability via ctranslate2
- Show "Ready (CPU)" status when running on CPU fallback
- Fix audio ducking muting app's own sound feedback
- Add Electron autoplay-policy for hotkey-only users
- Improve sound feedback with richer layered tones
- Smoothness overhaul: better easing, smooth scrolling, CSS containment
- Improve waveform visualizer with interpolated rendering
- Enhance text injector with multi-method fallback
- Improve setup script with robust venv validation
- Update README with screenshots and documentation
- Bump version to 1.1.0

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -50,14 +50,17 @@ deb:
   priority: optional
   compression: xz
   depends:
-    - python3 (>= 3.10)
+    - python3 (>= 3.11)
     - python3-venv
     - python3-pip
     - python3-dev
-    - libasound2-dev | libasound2t64
+    - libasound2 | libasound2t64
     - libportaudio2
-    - xdotool
   recommends:
-    - libappindicator3-1
+    - libayatana-appindicator3-1 | libappindicator3-1
+    - xdotool
+    - xclip
+    - wl-clipboard
+    - pulseaudio-utils
   afterInstall: build/after-install.sh
   afterRemove: build/after-remove.sh
